app/assets/stylesheets/jumbotron.css
/* Move down content because we have a fixed navbar that is 50px tall */
@font-face {
  font-family: 'Conv_FuturaStd-CondensedBoldObl';
  src: url('FuturaStd-CondensedBoldObl.eot');
  src: local('☺'), url('FuturaStd-CondensedBoldObl.woff') format('woff'), url('FuturaStd-CondensedBoldObl.ttf') format('truetype'), url('FuturaStd-CondensedBoldObl.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'Conv_FuturaStd-CondensedOblique';
  src: url('FuturaStd-CondensedOblique.eot');
  src: local('☺'), url('FuturaStd-CondensedOblique.woff') format('woff'), url('FuturaStd-CondensedOblique.ttf') format('truetype'), url('FuturaStd-CondensedOblique.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
  font-family: 'FuturaStd-MediumCondensed';
  src: url('../fonts/FuturaStd-MediumCondensed.eot');
  src: local('☺'), url('../fonts/FuturaStd-MediumCondensed.woff') format('woff'), url('../fonts/FuturaStd-MediumCondensed.ttf') format('truetype'), url('../fonts/FuturaStd-MediumCondensed.svg') format('svg');
  font-weight: normal;
  font-style: normal;
}
@font-face {
	font-family: 'NikeNeon';
	src: url('Nikeneon-Regular.eot');
	src: local('☺'), url('Nikeneon-Regular.woff') format('woff'), url('Nikeneon-Regular.ttf') format('truetype'), url('Nikeneon-Regular.svg') format('svg');
	font-weight: normal;
	font-style: normal;
}

body {
  padding-top: 0px;
  padding-bottom: 0px;
}
.title-jumbo{
  padding: 30px;
  line-height: 1;
  color: inherit;
  font-weight: 200;
  font-size: 63px;
  line-height: 1;
  color: inherit;
  font-weight: 500;
  max-width: 600px;
  margin-right: auto;
  margin-left: auto;
  font-family: 'Conv_FuturaStd-CondensedBoldObl';
  transform: rotate(-2deg); 

}
.title-jumbo-soon{
    padding: 30px;
  line-height: 1;
  color: inherit;
  font-weight: 200;
  font-size: 53px;
  line-height: 1;
  color: inherit;
  font-weight: 500;
  max-width: 600px;
  margin-right: auto;
  margin-left: auto;
  font-family: 'Conv_FuturaStd-CondensedBoldObl';
  transform: rotate(-2deg); 

}
.sub-jumbo{
	font-family: 'Conv_FuturaStd-CondensedOblique';
  font-smoothing: antialiased;
}
.barrioimg{
  width: 150px;
  opacity: .7;
}
.table thead > tr > th,
.table tbody > tr > th,
.table tfoot > tr > th,
.table thead > tr > td,
.table tbody > tr > td,
.table tfoot > tr > td {

  vertical-align:middle;
  font-family: 'Conv_FuturaStd-CondensedOblique',Arial;
  font-size: 24px;
  text-transform: uppercase;
  letter-spacing: 1px;



}
.losquemas{
  width:540px;
  height: 64px;
  margin-left: auto;
  margin-right: auto;
  background-image: url('/assets/los-que-mas-on.png');
  background-size: 540px 64px;
  margin-top: -20px;
}
.titlebarrios{
  width:94px;
  height: 40px;
  background-image: url('/assets/barrio.png');
  background-size: 94px 40px;
  margin-left: auto;
  margin-right: auto;
}
.titlekms{
  width:67px;
  height: 40px;
  background-image: url('/assets/kms.png');
  background-size: 67px 40px;
  margin-left: auto;
  margin-right: auto;
}
.titlepersonas{
  width:129px;
  height: 40px;
  background-image: url('/assets/personas.png');
  background-size: 129px 40px;
  margin-left: auto;
  margin-right: auto;

}
.barrioimg:hover{
    opacity: 1;


}
.barrioscontainer{
  max-width: 800px;
  margin: auto;
  display: table;
  height: 90vh;
}
.neon-down{

  background-image: url('/assets/btn-a.png');
  width: 34px;
  height: 32px;
  background-repeat:no-repeat;
  background-size: 34px 32px;
  margin:0 auto;
}

.neon-down:hover{
    background-image: url('/assets/btn-a-on.png');
    cursor: pointer;
  background-repeat:no-repeat;
  margin:0 auto;
  

}
.doit
{
  width: 132px;
  height: 64px; 
}
.corre-btn{
  background-image: url('/assets/corre.png');
  background-size: 146px 55px;
  width:146px;
  height:  55px;
  margin-top:20px;
}
.corre-btn:hover{
    background-image: url('/assets/correhover.png');

}


.neon-up{

  background-image: url('/assets/btn-up.png');
  width: 34px;
  height: 32px;
  background-repeat:no-repeat;
  background-size: 34px 32px;
  margin:0 auto;
}

.neon-up:hover{
  background-image: url('/assets/btn-up-on.png');
  cursor: pointer;
  background-repeat:no-repeat;
  margin:0 auto;
}
.tablebarrios{
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
}
.rankingbarrios{
  width: 60px;
}

.shares-social{
width: 200px;
margin-right: auto;
margin-left: auto;
}
.shares-social a{
  text-decoration: none;
}
.share-facebook{
background-image: url('/assets/comparte-normal.png');
width:97px;
height: 37px;
background-size: 97px 37px;
float: right;
}
.share-facebook:hover{
background-image: url('/assets/comparte-over.png');
}
.share-twitter{
background-image: url('/assets/tweet-normal.png');
width:97px;
height: 37px;
background-size: 97px 37px;

}
.share-twitter:hover{
background-image: url('/assets/tweet-over.png');
}
/* AUTOCOMPLETE



*/

  .ui-autocomplete {
  max-height: 200px;
  overflow-y: auto;
  /* prevent horizontal scrollbar */
  overflow-x: hidden;
  background-color:black;
  opacity:.9;
  font-family: 'Conv_FuturaStd-MediumCondensed';
  text-align:center;
  font-size:28px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border:transparent;
  text-transform: uppercase;
  font-smoothing: antialiased;


  }
  .ui-menu-item{
    font-size: 15px;
  }
  /* IE 6 doesn't support max-height
   * we use height instead, but this forces the menu to always be this tall
   */
  * html .ui-autocomplete {
    height:200px;
  }



/*

AUTOCOMPLETE

*/

.compartecarreras{
  text-decoration: underline;
}


@media screen and (max-width: 400px) {

  .barrioimg{width:120px;}


  .title-jumbo{
    font-size: 33px;
    margin-top: 10%;


  }
  .title-jumbo-soon{
    font-size: 25px;
    margin-top: 10%;


  }
  .sub-jumbo{
    margin-bottom: 20%;
  }
  .corre-btn:hover{
      background-image: url('/assets/corre.png');

  }
  .losquemas{
    width:360px;
    height: 43px;
    background-size: 360px 43px;
    margin-top: 20px;
  }
  .tablebarrios{

  }

}
@media screen and (min-width: 401px) and (max-width: 768px)  {

    .losquemas
    {
    width:450px;
    height: 54px;
    background-size: 450px 54px;
    margin-top: 20px;
    }

}
.barrios_centrados {
    display: table-cell;
    vertical-align: middle;
}

